--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "vite --port 3000 --open --host"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0"
+    "react-router-dom": "^6.8.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
