--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "start": "vite --port 3000 --open --host"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
     "@tailwindcss/line-clamp": "^0.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
