--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "firebase": "^9.17.1",
     "heroicons": "^2.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
