--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "heroicons": "^2.0.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.0",
     "react-youtube": "^10.1.0",
     "tailwind-scrollbar-hide": "^1.1.7"
